<resources>
    <string name="app_name">Recording</string>
    <string name="instructions">Instructions</string>
    <string name="edit_archives">Edit Archives</string>

    <string name="action_settings">Settings</string>
    <string name="Service_level"><b><i>Service level</i></b> (Required)</string>

    <string name="playback_error">An error occurred while playing the track. Please try again later.</string>
    <string name="recording_error">An error occurred while initiating audio recording. Please try again later.</string>

    <string name="permission_rationale">This app needs access to your mic to record audio, write access to save your recordings and phone state access to stop recording on incoming or outgoing calls.</string>
    <string name="storage_permission_rationale">This app needs access to file system to read and write recordings.</string>
    <string name="on_permission_denied">Application cannot function without these permissions.</string>

    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="transcribe">Transcribe</string>
    <string name="cancel">cancel</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="yes">Yes</string>

    <string name="send_transcribtion">Send Transcribtion</string>
    <string name="last_transcribe">Send Last Transcribtion</string>
    <string name="play_recording">Play Recording</string>
    <string name="play_last_recording">Play Last Recording</string>
    <string name="create_new_records">Create New Records</string>

    <string name="start_recording">Start Recording</string>
    <string name="recording">Recording</string>
    <string name="paused">Paused</string>
    <string name="playing">Playing</string>
    <string name="recording_completed">Recording Completed</string>
    <string name="audio_archive">Audio Archive</string>
    <string name="configs">Configurations</string>
    <string name="info">Info</string>

    <string name="recordings">Recordings</string>

    <string name="hint_name">Enter name here.</string>
    <string name="hint_instructions">Enter instructions here.</string>

    <string name="no_recordings">You haven\'t made any recording yet.</string>
    <string name="type_recording_name">Rename Recording</string>

    <string name="name_already_exists">A recording with same name already exists.</string>

    <string name="delete_contfirmation_msg">Are you sure?</string>
    <string name="zero_time">00:00</string>

    <string name="channel_id">service_notifications</string>
    <string name="channel_description">Notifications for running recording or playback</string>
    <string name="channel_name">Recording Services</string>
    <string name="channel_mono">Mono</string>
    <string name="channel_stereo">Stereo</string>
    <string name="bitrate">Bitrate</string>
    <string name="empty_tracks_exception">Recording tracks not found</string>
</resources>
