<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".record.RecordingActivity"
    android:animateLayoutChanges="true">
    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/recording_status_font_size"
        android:text="@string/start_recording"/>
    <com.android.shaheer.recording.utils.DynamicSineWaveView
        android:id="@+id/view_sine_wave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/waves_view_size"
        android:layout_gravity="center"
        android:visibility="invisible"/>
    <RelativeLayout
        android:id="@+id/rl_initial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:elevation="0dp"
        app:elevation="0dp">
        <com.omega_r.libs.OmegaCenterIconButton
            android:id="@+id/btn_start_recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/recording_btn_horizontal_margin"
            android:layout_marginRight="@dimen/recording_btn_horizontal_margin"
            android:layout_marginTop="@dimen/recording_btn_vertical_margin"
            android:layout_marginBottom="@dimen/recording_btn_vertical_margin"
            android:background="@drawable/bg_recording_btn"
            android:drawableLeft="@drawable/ic_mic"
            android:text="@string/start_recording"
            android:textSize="@dimen/recording_btn_text_size"
            android:textColor="@android:color/white"
            />
        <com.omega_r.libs.OmegaCenterIconButton
            android:id="@+id/btn_play_last_recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_start_recording"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/recording_btn_horizontal_margin"
            android:layout_marginRight="@dimen/recording_btn_horizontal_margin"
            android:background="@drawable/bg_play_recording"
            android:drawableLeft="@drawable/ic_play_circle_outline"
            android:text="@string/play_last_recording"
            android:textSize="@dimen/recording_btn_text_size"
            android:textColor="@color/red"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_recording"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:elevation="0dp"
        app:elevation="0dp">
        <TextView
            android:id="@+id/tv_record_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_time_pebble"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/recording_duration_side_padding"
            android:paddingRight="@dimen/recording_duration_side_padding"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="0:00"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/recording_btn_horizontal_margin">
                <ImageButton
                    android:id="@+id/btn_recording_action"
                    android:layout_width="@dimen/recording_action_btn_size"
                    android:layout_height="@dimen/recording_action_btn_size"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom ="@dimen/recording_action_btn_bottom_margin"
                    android:src="@drawable/bg_recording_action_pause"
                    android:background="@android:color/transparent"
                    />
                <TextView
                    android:id="@+id/tv_recording_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_recording_action"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textColor="@color/darkBlue"
                    android:text="@string/pause"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/recording_btn_horizontal_margin">
                <ImageButton
                    android:id="@+id/btn_recording_stop"
                    android:layout_width="@dimen/recording_action_btn_size"
                    android:layout_height="@dimen/recording_action_btn_size"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom ="@dimen/recording_action_btn_bottom_margin"
                    android:src="@drawable/bg_recording_action_stop"
                    android:background="@android:color/transparent"
                    />
                <TextView
                    android:id="@+id/tv_recording_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_recording_stop"
                    android:layout_centerInParent="true"
                    android:textColor="@color/darkBlue"
                    android:text="@string/stop"
                    />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_recorded"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone"
        android:elevation="0dp"
        app:elevation="0dp">
        <com.omega_r.libs.OmegaCenterIconButton
            android:id="@+id/btn_new_recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/recording_btn_horizontal_margin"
            android:layout_marginRight="@dimen/recording_btn_horizontal_margin"
            android:layout_marginTop="@dimen/recording_btn_vertical_margin"
            android:layout_marginBottom="@dimen/recording_btn_vertical_margin"
            android:background="@drawable/bg_recording_btn"
            android:drawableLeft="@drawable/ic_mic"
            android:text="@string/create_new_records"
            android:textSize="@dimen/recording_btn_text_size"
            android:textColor="@android:color/white"
            />
        <com.omega_r.libs.OmegaCenterIconButton
            android:id="@+id/btn_play_recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_new_recording"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/recording_btn_horizontal_margin"
            android:layout_marginRight="@dimen/recording_btn_horizontal_margin"
            android:background="@drawable/bg_play_recording"
            android:drawableLeft="@drawable/ic_play_circle_outline"
            android:text="@string/play_recording"
            android:textSize="@dimen/recording_btn_text_size"
            android:textColor="@color/red"
            />
    </RelativeLayout>

    <!--<android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white"
        app:menu="@menu/navigation"
        app:itemIconTint="@color/bg_bottom_navbar_item"
        app:itemTextColor="@color/bg_bottom_navbar_item"
        android:theme="@style/BlueTheme"/>-->


    <LinearLayout
        android:id="@+id/ll_bottom_options"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_option_bar_height"
        android:orientation="horizontal"
        android:elevation="10dp"
        app:elevation="10dp">
        <Button
            android:id="@+id/btn_audio_archive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_speaker"
            android:padding="@dimen/bottom_option_btn_padding"
            android:background="@drawable/bg_bottom_options"
            android:text="@string/audio_archive"
            android:textColor="@android:color/darker_gray"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>