<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".record.RecordingFragment">

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="@dimen/recording_status_font_size"
        android:text="@string/start_recording"/>
<!--        android:textColor="@color/darkBlue"/>-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />
    <com.android.shaheer.recording.utils.DynamicSineWaveView
        android:id="@+id/view_sine_wave"
        android:layout_width="0dp"
        android:layout_height="@dimen/waves_view_size"
        app:layout_constraintTop_toBottomOf="@+id/guideline_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"/>

    <com.omega_r.libs.OmegaCenterIconButton
        android:id="@+id/btn_start_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_sine_wave"
        app:layout_constraintBottom_toTopOf="@+id/btn_play_last_recording"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/recording_btn_horizontal_margin"
        android:layout_marginEnd="@dimen/recording_btn_horizontal_margin"
        android:layout_marginBottom="@dimen/recording_btn_vertical_margin"
        android:background="@drawable/bg_recording_btn"
        android:drawableStart="@drawable/ic_mic"
        android:text="@string/start_recording"
        android:textSize="@dimen/recording_btn_text_size"
        android:textColor="@android:color/white"
        />
    <com.omega_r.libs.OmegaCenterIconButton
        android:id="@+id/btn_play_last_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_recording"
        app:layout_constraintBottom_toTopOf="@+id/btn_audio_archive"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/recording_btn_horizontal_margin"
        android:layout_marginEnd="@dimen/recording_btn_horizontal_margin"
        android:background="@drawable/bg_play_recording"
        android:drawableStart="@drawable/ic_play_circle_outline"
        android:text="@string/play_last_recording"
        android:textSize="@dimen/recording_btn_text_size"
        android:textColor="@color/red"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="tv_record_duration,btn_recording_action,tv_recording_action,btn_recording_stop,tv_recording_stop"/>

    <TextView
        android:id="@+id/tv_record_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view_sine_wave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_time_pebble"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/recording_duration_side_padding"
        android:paddingRight="@dimen/recording_duration_side_padding"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="0:00"/>

    <ImageButton
        android:id="@+id/btn_recording_action"
        android:layout_width="@dimen/recording_action_btn_size"
        android:layout_height="@dimen/recording_action_btn_size"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/tv_record_duration"
        app:layout_constraintBottom_toTopOf="@+id/btn_audio_archive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_recording_stop"
        android:layout_marginEnd="@dimen/recording_btn_horizontal_margin"
        android:src="@drawable/bg_recording_action_pause"
        android:background="@android:color/transparent"
        />
    <TextView
        android:id="@+id/tv_recording_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/btn_recording_action"
        app:layout_constraintEnd_toEndOf="@+id/btn_recording_action"
        app:layout_constraintTop_toBottomOf="@+id/btn_recording_action"
        android:layout_marginTop="@dimen/recording_action_btn_bottom_margin"
        android:gravity="center"
        android:textColor="@color/darkBlue"
        android:text="@string/pause"
        />
    <ImageButton
        android:id="@+id/btn_recording_stop"
        android:layout_width="@dimen/recording_action_btn_size"
        android:layout_height="@dimen/recording_action_btn_size"
        app:layout_constraintTop_toBottomOf="@+id/tv_record_duration"
        app:layout_constraintBottom_toTopOf="@+id/btn_audio_archive"
        app:layout_constraintStart_toEndOf="@+id/btn_recording_action"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/recording_btn_horizontal_margin"
        android:src="@drawable/bg_recording_action_stop"
        android:background="@android:color/transparent"
        />
    <TextView
        android:id="@+id/tv_recording_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/btn_recording_stop"
        app:layout_constraintEnd_toEndOf="@+id/btn_recording_stop"
        app:layout_constraintTop_toBottomOf="@+id/btn_recording_stop"
        android:layout_marginTop="@dimen/recording_action_btn_bottom_margin"
        android:textColor="@color/darkBlue"
        android:text="@string/stop"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_recorded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="btn_new_recording,btn_play_recording"/>


    <com.omega_r.libs.OmegaCenterIconButton
        android:id="@+id/btn_new_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view_sine_wave"
        app:layout_constraintBottom_toTopOf="@+id/btn_play_recording"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/recording_btn_horizontal_margin"
        android:layout_marginRight="@dimen/recording_btn_horizontal_margin"
        android:layout_marginBottom="@dimen/recording_btn_vertical_margin"
        android:background="@drawable/bg_recording_btn"
        android:drawableStart="@drawable/ic_mic"
        android:text="@string/create_new_records"
        android:textSize="@dimen/recording_btn_text_size"
        android:textColor="@android:color/white"
        />
    <com.omega_r.libs.OmegaCenterIconButton
        android:id="@+id/btn_play_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_new_recording"
        app:layout_constraintBottom_toTopOf="@+id/btn_audio_archive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/recording_btn_horizontal_margin"
        android:layout_marginRight="@dimen/recording_btn_horizontal_margin"
        android:background="@drawable/bg_play_recording"
        android:drawableStart="@drawable/ic_play_circle_outline"
        android:text="@string/play_recording"
        android:textSize="@dimen/recording_btn_text_size"
        android:textColor="@color/red"
        />

    <Button
        android:id="@+id/btn_audio_archive"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_option_bar_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableTop="@drawable/ic_speaker"
        android:padding="@dimen/bottom_option_btn_padding"
        android:background="@drawable/bg_bottom_options"
        android:text="@string/audio_archive"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>