<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/horizontal_margin"
    android:paddingVertical="@dimen/vertical_margin"
    android:paddingHorizontal="@dimen/vertical_margin"
    android:background="@drawable/bg_configs_dialog">

    <TextView
        android:id="@+id/tv_bitrate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/bitrate"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bitrates"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bitrate"
        app:layout_constraintBottom_toTopOf="@+id/barrier_bitrate"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_bitrate"
        android:clipToPadding="false"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bitrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="rv_bitrates"/>

<!--    <TextView
        android:id="@+id/tv_channels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/barrier_bitrate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="Channel"
        android:textSize="40sp"
        android:textStyle="bold"
        />-->
    <Button
        android:id="@+id/btn_channel_mono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/barrier_bitrate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_channel_stereo"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:background="?android:selectableItemBackgroundBorderless"
        android:textAllCaps="false"
        android:text="@string/channel_mono"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btn_channel_stereo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/barrier_bitrate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_channel_mono"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:background="?android:selectableItemBackgroundBorderless"
        android:textAllCaps="false"
        android:text="@string/channel_stereo"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        />



</androidx.constraintlayout.widget.ConstraintLayout>